kubernetes/apps/vpn/qbitrr/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbitrr-health
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbitrr
  ingress:
    - fromEntities:
        - host
        - health
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbitrr-vxlan
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbitrr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: pod-gateway
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbitrr-cilium-ingress
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbitrr
  ingress:
    - fromEntities:
        - host
        - cluster
        - ingress
